# claude-intelligence-hub

./: .gitignore  AUDIT_TRAIL.md  CHANGELOG.md  CIH-ROADMAP.md  CLAUDE.md  CODEOWNERS  COMMANDS.md  CONTRIBUTING.md  DEVELOPER_CHEATSHEET.md  DEVELOPMENT_IMPACT_ANALYSIS.md  EXECUTIVE_SUMMARY.md  HUB_MAP.md  QUICKSTART_NEW_SKILL.md  README.md  REORGANIZATION_IMPACT_ANALYSIS.md  REORGANIZATION_ROADMAP.md  WINDOWS_JUNCTION_SETUP.md
.claude/: project-instructions.md
.githooks/: pre-commit  pre-push
agent-orchestration-protocol/: .gitignore  .metadata  AOP-EXECUTIVE-SUMMARY.md  AOP_ROUND1_PROMPT.md  AOP_WORKED_EXAMPLES.md  CHANGELOG.md  README.md  ROADMAP.md  SKILL.md
agent-orchestration-protocol/v2/: conftest.py  pyproject.toml
agent-orchestration-protocol/v2/02_docs/: 01_plan-aop-v2-ciclope-final.md  03_contract-aop-v2-ciclope-final.md
agent-orchestration-protocol/v2/02_docs/milestone4/00_reports/: m4_audit_report_cyclops.md  m4_implementation_report.md
agent-orchestration-protocol/v2/core/: audit_logger.py  exceptions.py  guard_rail_engine.py  models.py  orchestrator.py  repo_auditor.py  transformation_layer.py  version_router.py
agent-orchestration-protocol/v2/schemas/: audit_record.schema.json  executor_response.schema.json  task_envelope.schema.json
agent-orchestration-protocol/v2/tests/: test_audit_logger.py  test_engine.py  test_integration.py  test_integration_m4.py  test_repo_auditor.py  test_router.py  test_schemas.py  test_transformation.py
bi-datavizx/: .metadata  CHANGELOG.md  README.md  SKILL.md  operations-guide-examples.md
x-mem/: .metadata  (+3 more)
(+376 files in other folders)
